# ThinkSync

./: .dockerignore  .gitignore  Businesscontext.md  Dockerfile  EvaluationandResearch.md  README.md  Technical_Architecture.md  UI.md  app.py  app_log.txt  config.py  core_concept.md  developer_summary.md  engine.py  grader.py  inference.py  kk.md  models.py  openenv.yaml  pyproject.toml  requirements.txt  securityandportability.md  tasks.py  test_system.py
server/: app.py
