[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustops-env"
version = "0.1.0"
description = "OpenEnv-based AI moderation environment"
authors = [{name = "Anubhav"}]
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "openai",
    "pydantic",
    "PyYAML",
    "requests",
    "urllib3",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
